fix for undefined message error in console when trying to open 3+ composers on mobile

--- a/src/sass/composer.scss
+++ b/src/sass/composer.scss
@@ -105,7 +105,6 @@
 			height: initial !important;
 			box-sizing: border-box;
 			margin: 0;
-			z-index: 99 !important;
 			section {
 				height: initial !important;
 			    overflow: initial !important;
